Bringing UI up to date with changes to vote/trusted source model

--- a/static/index.html
+++ b/static/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Prediction Market</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" type="text/css" /> -->
     <link rel="stylesheet" href="./app.css" type="text/css" />
 </head>
 
